@@ -16,3 +16,4 @@ Steffen Politzky (dxf export)
 David A. Bartold (part of despeckle)
 Han-Wen Nienhuys (rpm-spec file)
 R. P. C. Rodgers (man page)
+Allen Barnett (improved emf export)
